--- a/package.json
+++ b/package.json
@@ -31,7 +31,11 @@
     "@types/dotenv": "^4.0.3",
     "@types/multer": "^1.3.6",
     "@types/mz": "0.0.32",
+    "append-transform": "^1.0.0",
+    "async": "^2.6.0",
     "body-parser": "^1.17.2",
+    "braces": "^2.3.2",
+    "combined-stream": "^1.0.6",
     "common-env": "^6.1.0",
     "crypto": "0.0.3",
     "csv": "^1.1.1",
@@ -40,14 +44,17 @@
     "express": "^4.15.3",
     "express-jwt": "^5.3.0",
     "express-openapi": "^1.0.0",
+    "extglob": "^3.0.0",
     "glob": "^7.1.2",
     "istanbul": "^1.1.0-alpha.1",
     "json-schema-filter": "^0.1.5",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "micromatch": "^3.1.10",
     "moment": "^2.18.1",
     "moment-recur": "^1.0.7",
-    "mongodb": "^2.2.30",
+    "mongodb": "^2.2.35",
+    "mongodb-core": "^3.0.7",
     "multer": "^1.3.0",
     "mz": "^2.6.0",
     "node-cron": "^1.2.0",
@@ -68,7 +75,7 @@
     "@types/winston": "^2.3.4",
     "chai": "^4.1.0",
     "cross-env": "^5.0.1",
-    "mocha": "^3.4.2",
+    "mocha": "^3.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "rewire": "^2.5.2",
