--- a/package.json
+++ b/package.json
@@ -31,23 +31,30 @@
     "@types/dotenv": "^4.0.3",
     "@types/multer": "^1.3.6",
     "@types/mz": "0.0.32",
+    "async": "^2.6.0",
     "body-parser": "^1.17.2",
+    "braces": "^2.3.2",
+    "combined-stream": "^1.0.6",
     "common-env": "^6.1.0",
     "crypto": "0.0.3",
     "csv": "^1.1.1",
     "dotenv": "^4.0.0",
     "es6-promisify": "^5.0.0",
     "express": "^4.15.3",
-    "express-jwt": "^5.3.0",
+    "express-jwt": "^5.3.1",
     "express-openapi": "^1.0.0",
+    "express-openapi-security": "^0.2.2",
+    "extglob": "^3.0.0",
     "glob": "^7.1.2",
     "istanbul": "^1.1.0-alpha.1",
     "json-schema-filter": "^0.1.5",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "micromatch": "^3.1.10",
     "moment": "^2.18.1",
     "moment-recur": "^1.0.7",
-    "mongodb": "^2.2.30",
+    "mongodb": "^2.2.35",
+    "mongodb-core": "^3.1.0-beta4",
     "multer": "^1.3.0",
     "mz": "^2.6.0",
     "node-cron": "^1.2.0",
@@ -56,6 +63,7 @@
     "pbkdf2": "^3.0.12",
     "supertest": "^3.0.0",
     "swagger-tools": "^0.10.3",
+    "to-iso-string": "0.0.2",
     "uuid": "^3.1.0",
     "winston": "^2.3.1",
     "winston-daily-rotate-file": "^1.4.6"
@@ -68,7 +76,7 @@
     "@types/winston": "^2.3.4",
     "chai": "^4.1.0",
     "cross-env": "^5.0.1",
-    "mocha": "^3.4.2",
+    "mocha": "^3.5.3",
     "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "rewire": "^2.5.2",
