--- a/.env
+++ b/.env
@@ -16,3 +16,4 @@ DATABASE_MONGODB_URL=mongodb://localhost
 DATABASE_MONGODB_PORT=27017
 DATABASE_MONGODB_DATABASE_NAME=penduJs-server-api
 DATABASE_MONGODB_USERS_COLLECTION=users
+DATABASE_MONGODB_LOBBIES_COLLECTION=lobbies
