--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:<path-to/gitlab-project>.git"
+    "url": "git@github.com:<path-to/github-project>.git"
   },
   "author": "Web Factory",
   "license": "ISC",
